# marine-instruments-simulator.pages

./: .gitattributes  .gitignore  CONTRIBUTING.md  CREDITS.md  End_User_License_Agreement.md  README.md  Release_Notes.md  SIRENIA.spec  THIRD_PARTY_LICENSE.md  changelogs.md  open_with_vsc.bat  pyproject.toml  release_notes.md
.bts/progressions/: brainstorms.md  roadmap.md  workflows.md
.bts/proposals/: proposal.docx
.bts/uml/: resources.md
InDev/: library-installation.ipynb
InDev/Learning Code/: HelloWorld.java
InDev/UI Test/: Phyton_Kivy-testBasic.py  Phyton_Kivy-testComplex.py  Phyton_PyQt-testBasic.py  Phyton_PyQt-testComplex.py  Phyton_Tkinter-testBasic.py  Phyton_Tkinter-testComplex.py
assets/: README.md
data/: README.md  testPrint.py  valueFixed.py  valuesRandom.py
docs/: README.md  THIRD_PARTY_LICENSE.md  directory_information.md
docs/contributing/: coding.md  information.md  information_guide.md
pages/: .gitignore  CONTRIBUTING.md  README.md  THIRD_PARTY_LICENSE.md  changelogs.md
pages/docs/: README.md  roadmap.md
progressions/: brainstorms.md  roadmap.md
src/: main_ui.py  pyinstaller.py  themes.py
src/generators/: value_generator.py
src/instruments/hand_refractometer/: Phyton_Tkinter-HRefracBasic.py  README.md  command_definitions.py
src/instruments/handrefractometer/: handrefractometer_ui.py
src/instruments/handrefractometer/handrefractometer_module/: command_definitions.py  command_test.ipynb  handrefractometer_actions.py  value_generator.py
src/main/: general_instrument_ui.py
src/ui/: general_instrument_ui.py  wiki_ui.py
